fix navbar color, cursor on mobile

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -137,6 +137,10 @@ strong {
   mix-blend-mode: exclusion;
   pointer-events: none;
 
+  @media only screen and (max-width: $breakpoint-md) {
+    display: none;
+  }
+
   &--lg {
     width: 20px;
     height: 20px;
