--- a/src/styles/components/header.module.scss
+++ b/src/styles/components/header.module.scss
@@ -14,6 +14,10 @@
   display: flex;
   align-items: center;
 
+  mix-blend-mode: exclusion;
+  filter: contrast(9);
+  isolation: isolate;
+
   & div {
     display: flex;
     flex-direction: column;
@@ -38,7 +42,7 @@
     overflow: visible;
 
     & div {
-      width: ;
+      width: 100%;
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
